<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <Button
        android:id="@+id/CreateNewList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Создать!" />

    <EditText
        android:id="@+id/enterListName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:hint="Придумайте название!"
        android:layout_marginTop="100dp"/>

</LinearLayout>