<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".MainActivity">

    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="1"></ListView>

    <Button
        android:id="@+id/joinExisting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Подключиться к существующему списку"/>

    <Button
        android:id="@+id/CreateNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Создать Список"/>

</LinearLayout>