<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#c7bf98"
    android:padding="20dp"
    android:gravity="center"
    >
    <TextView
        android:id="@+id/text_view_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ПОКА НИЧЕГО НЕ СЪЕЛИ"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        />

    <Button
        android:layout_marginTop="50dp"
        android:id="@+id/button_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Закрыть"
        />
</LinearLayout>