<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">


    <TextView
        android:textAlignment="center"
        android:id="@+id/nameList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Название Списка"
        android:textSize="24sp" />

    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>

    <Button
        android:layout_marginTop="100dp"
        android:id="@+id/addProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Добавить продукт"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addTimetable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Добавить по расписанию"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</LinearLayout>
